<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191D32" android:padding="20dp"
    tools:context=".vistas.inicio.InicioFragment">

    <LinearLayout
        android:id="@+id/profileContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivPerfil"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icono_placeholder" android:background="@drawable/circulo_backgroud" android:padding="15dp"
            android:contentDescription="@string/profile_picture_description"
            android:layout_marginEnd="16dp"
            app:tint="#D9D9D9" />

        <TextView
            android:id="@+id/tvnombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_message" tools:text="¡Bienvenido/a, [Nombre Apellido]!"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedorAgendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profileContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp">

        <android.widget.Button
            android:id="@+id/btnAgendarTurno"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/agendar_turno"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_naranja_bg"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedorMisDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/contenedorAgendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.widget.Button
            android:id="@+id/btnMisDatos"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/mis_datos"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_naranja_bg"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedorHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/contenedorMisDatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.widget.Button
            android:id="@+id/btnHistorial"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/historial"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_naranja_bg"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contenedorSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/contenedorHistorial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.widget.Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/salir"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_naranja_bg"
            android:layout_margin="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>